--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hello, I'm Rajdeep.
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm a Full Stack Python and Web Developer.
