--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,8 +2,8 @@
 
 <ProjectCard
   title="ShareImage"
-  link="https://github.com/Zype-Z/ShareImage"
+  link="https://github.com/Zype-Z/ShareImage.js"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A Python Library to Generate Dynamic Social Share Images. Powered by Cloudinary.
+  A Tool Library to Generate Dynamic Social Share Images.
 </ProjectCard>
